--- a/src/main/resources/templates/laptops.html
+++ b/src/main/resources/templates/laptops.html
@@ -3,7 +3,8 @@
     <title>Home page</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
 </head>
 <body>
@@ -15,6 +16,13 @@
         </a>
         <a th:href="@{/api/laptops/save}">
         <button class="btn btn-outline-secondary" type="button">Zapisz dane do pliku TXT</button>
+        </a>
+
+        <a th:href="@{/api/laptops/xml}">
+            <button class="btn btn-outline-success me-2" type="button">Importuj dane z XML</button>
+        </a>
+        <a th:href="@{/api/laptops/saveXml}">
+            <button class="btn btn-outline-secondary" type="button">Eksportuj dane do XML</button>
         </a>
     </form>
 </nav>
