presenting data read from xml

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,13 @@
             <button class="btn btn-outline-success me-2" type="button">Wczytaj dane z pliku TXT</button>
         </a>
         <a th:href="@{/api/laptops/save}">
-            <button class="btn btn-outline-secondary" type="button">Zapisz dane do pliku TXT</button>
+            <button class="btn btn-outline-secondary me-2" type="button">Zapisz dane do pliku TXT</button>
+        </a>
+        <a th:href="@{/api/laptops/xml}">
+            <button class="btn btn-outline-success me-2" type="button">Importuj dane z XML</button>
+        </a>
+        <a th:href="@{/api/laptops/saveXml}">
+            <button class="btn btn-outline-secondary" type="button">Eksportuj dane do XML</button>
         </a>
     </form>
 </nav>
