--- a/src/main/resources/templates/laptops.html
+++ b/src/main/resources/templates/laptops.html
@@ -15,7 +15,7 @@
             <button class="btn btn-outline-success me-2" type="button">Wczytaj dane z pliku TXT</button>
         </a>
         <a th:href="@{/api/laptops/save}">
-        <button class="btn btn-outline-secondary" type="button">Zapisz dane do pliku TXT</button>
+        <button class="btn btn-outline-secondary me-2" type="button">Zapisz dane do pliku TXT</button>
         </a>
 
         <a th:href="@{/api/laptops/xml}">
